--- a/style.css
+++ b/style.css
@@ -1,105 +1,21 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-  margin: 0px;
-}
-main {
-  width: auto%;
-  height: auto;
-  position: relative;
+    background-color: black;
 }
 
-.profilePic {
-  width: 120px;
-  height: 130px;
-  margin: auto;
-  border-radius: 100%;
+h1{
+    color: #009966;
+    font-size: 16px;
+    font-family: monospace;
+    text-align: left;
+    line-height: 5vh;
+    margin-left: 10px;
 }
-.profile {
-  width: 20%;
-  height: 700px;
-  background-color: tomato;
-  position: fixed;
-  text-align: center;
-  font-family: "Roboto", sans-serif;
-  min-width: 250px;
-}
-h1 {
-  display: block;
-  width: auto;
-  font-weight: bold;
-  color: white;
-}
-.tag {
-  font-weight: bold;
-  color: #fff55a;
-}
+span {
 
-.profile p {
-  margin: 20px 13px;
-}
-
-h3 {
-  display: block;
-  font-weight: 500;
-  margin-top: 70px;
-  margin-bottom: -1px;
-}
-.content {
-  width: 80%;
-  min-width: 900px;
-  height: auto;
-  position: absolute;
-  text-align: center;
-  margin-left: 20%;
-  font-family: "Open Sans", sans-serif;
-  overflow: hidden;
-}
-
-.container {
-  width: 98%;
-  min-width: 900px;
-  height: auto;
-  position: relative;
-  text-align: center;
-  background-color: #fff;
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-}
-h2 {
-  display: block;
-  width: 120px;
-  height: 35px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 30px;
-  position: relative;
-  font-weight: bold;
-  color: tomato;
-}
-
-article {
-  width: 280px;
-  height: 380px;
-  position: absolute;
-  margin: 20px 10px;
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-box-shadow: 0px 0px 51px -15px rgba(0, 0, 0, 0.221);
-  -moz-box-shadow: 0px 0px 51px -15px rgba(0, 0, 0, 0.221);
-  box-shadow: 0px 0px 51px -15px rgba(0, 0, 0, 0.221);
-  overflow: hidden;
-}
-
-img {
-  width: auto;
-  height: 200px;
-}
-
-article > p {
-    padding: 5px;
-    text-align: justify;
-	-webkit-hyphens: auto;
-	hyphens: auto;
 }
