--- a/style.css
+++ b/style.css
@@ -9,13 +9,20 @@ body {
 }
 
 h1{
-    color: #009966;
+    color: #25c992;
     font-size: 16px;
     font-family: monospace;
     text-align: left;
     line-height: 5vh;
     margin-left: 10px;
 }
-span {
 
-}
+.blink {
+    animation: blinker 1s step-start infinite;
+  }
+  
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
